--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,13 @@
+pip==24.3.1
+
+setuptools
+
+wheel
+
+numpy
+
 joblib==1.2.0
-streamlit==1.40.0
-scikit-learn==1.2.0
-pandas==1.5.2
+
+streamlit
+
+scikit-learn
